docs: update google-java-format version to v1.34.1 in README
Also document the required --add-exports JVM flags and JDK 21 requirement
for running the formatter on Java 16+ (JEP 396).

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>